# Cargo.toml
[package]
name = "stm32-f411-controller"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.6.15"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"

smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

[dependencies.stm32f4xx-hal]
version = "0.10"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here